[gd_scene load_steps=2 format=3 uid="uid://cs8jdsmhf6pce"]

[ext_resource type="Script" path="res://Scenes/DialogueTriggers/DialogTrigger.gd" id="1_ub7ly"]

[node name="DialogueTrigger" type="Area2D"]
script = ExtResource("1_ub7ly")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
